@@ -1,0 +1,19 @@
+/*
+ * Translatable strings file generated by Glade.
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
+ */
+
+gchar *s = N_("XML Tree");
+gchar *s = N_("Hierarchy");
+gchar *s = N_("Attributes");
+gchar *s = N_("Key");
+gchar *s = N_("Value");
+gchar *s = N_("Delete");
+gchar *s = N_("Add");
+gchar *s = N_("Change");
+gchar *s = N_("Content");
+gchar *s = N_("Change");
+gchar *s = N_("Delete");
+gchar *s = N_("Add");
+gchar *s = N_("Change");
