@@ -1,0 +1,6 @@
+#ifndef SP_XML_TREE_H
+#define SP_XML_TREE_H
+
+void sp_xml_tree_dialog (void);
+
+#endif
